--- a/index.html
+++ b/index.html
@@ -30,16 +30,26 @@
         ><button>
             &#xE001; 연구 질문하기
         </button></a><br>
-        <a href="https://example.com" class="button">
+
+        <a
+        href="https://drive.google.com/file/d/1sq1A6yDhBzpLULdnxff95qx-FBUYfAtu/view?usp=share_link"
+        class="button"
+        >
             <button>&#xE001; 보고서 보기</button>
         </a><br>
-        <a href="https://example.com" class="button">
+
+        <a
+        href="https://drive.google.com/drive/folders/114FN6bWxVqxmjqxpyPCUoiTKWpjNHWIN?usp=share_link"
+        class="button"
+        >
             <button>&#xE001; 추가 자료 보기</button>
         </a><br>
+
         <a href="references.html" class="button">
             <button>&#xE001; 참고문헌 확인하기</button>
         </a>
         
+
         <img
         src="IGO-finalist.png"
         style="height: 3rem; margin-top: 2rem;"
